[tool.poetry]
name = "mapping"
version = "0.1.0"
description = "Project to map urban landscapes using OSM API."
authors = ["Andrei Valdez <andreivaldezau@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
osmapi = "^4.2.0"
overpy = "^0.7"
geopandas = "^1.0.1"
folium = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
